--- a/VocieSDKTest/app/src/main/res/layout/activity_main.xml
+++ b/VocieSDKTest/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,21 @@
     android:orientation="vertical"
     tools:context="com.iflytek.mkl.vociesdktest.MainActivity">
 
-    <EditText
-        android:id="@+id/et_output"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:enabled="false"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/et_output"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+
+            android:enabled="false" />
+
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,11 +34,31 @@
             android:layout_weight="1"
             android:text="合肥天气" />
 
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_understand"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="文字理解" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <Button
-            android:id="@+id/btn_understand"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_startlisten"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="理解" />
+            android:layout_weight="1"
+            android:text="开始录音" />
+
+        <Button
+            android:id="@+id/btn_stoplisten"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="结束录音" />
 
     </LinearLayout>
 
