--- a/IWeather/app/src/main/res/layout/county_choose.xml
+++ b/IWeather/app/src/main/res/layout/county_choose.xml
@@ -23,6 +23,14 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="热门城市"
+        android:textColor="#000"
+        android:textSize="18sp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_city_list"
         android:layout_width="match_parent"
