--- a/IWeather/app/src/main/res/layout/activity_main.xml
+++ b/IWeather/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.iflytek.klma.iweather.MainActivity">
+    tools:context="com.iflytek.klma.iweather.ui.MainActivity">
 
 </FrameLayout>
