--- a/IWeather/app/src/main/res/layout/county_choose.xml
+++ b/IWeather/app/src/main/res/layout/county_choose.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <EditText
             android:id="@+id/et_city_input"
@@ -30,6 +33,13 @@
         android:text="热门城市"
         android:textColor="#000"
         android:textSize="18sp" />
+
+    <!--<com.ismaeltoe.FlowLayout-->
+    <!--android:id="@+id/fl_city_list"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:padding="10dp"-->
+    <!--android:layout_weight="1" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_city_list"
