--- a/IWeather/app/src/main/res/layout/hot_county_item.xml
+++ b/IWeather/app/src/main/res/layout/hot_county_item.xml
@@ -6,10 +6,10 @@
 
     <Button
         android:id="@+id/county_name_item"
-        android:textSize="20sp"
-        android:layout_margin="3dp"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        android:paddingTop="3dp"
         android:background="#fff"
-        android:layout_height="wrap_content" />
+        android:textSize="15sp" />
 </LinearLayout>
