--- a/IWeather/app/src/main/res/layout/county_choose.xml
+++ b/IWeather/app/src/main/res/layout/county_choose.xml
@@ -5,34 +5,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:focusable="true"-->
+        <!--android:focusableInTouchMode="true">-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/et_city_input"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:hint="输入城市名称" />-->
+
+        <!--<Button-->
+            <!--android:id="@+id/btn_search"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="搜索" />-->
+
+    <!--</LinearLayout>-->
+
+    <com.iflytek.klma.iweather.ui.MyToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
-
-        <EditText
-            android:id="@+id/et_city_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="输入城市名称" />
-
-        <Button
-            android:id="@+id/btn_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="搜索" />
-
-    </LinearLayout>
+        android:layout_height="45dp"
+        app:inputTextHint="国内城市搜索"
+        app:titleType="search"/>
 
     <TextView
+        android:paddingTop="9dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:paddingLeft="8dp"
         android:text="热门城市"
         android:textColor="#000"
-        android:textSize="18sp" />
+        android:textSize="13sp" />
 
     <!--<com.ismaeltoe.FlowLayout-->
     <!--android:id="@+id/fl_city_list"-->
@@ -45,6 +54,8 @@
         android:id="@+id/rv_city_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_weight="1" />
 
     <Button
