--- a/IWeather/app/src/main/res/layout/toolbar.xml
+++ b/IWeather/app/src/main/res/layout/toolbar.xml
@@ -84,9 +84,10 @@
             android:background="#fff"
             android:hint="查询"
             android:textColorHint="#7cced7"
-            android:textSize="12sp" />
+            android:textSize="13sp" />
 
         <ImageButton
+            android:visibility="invisible"
             android:id="@+id/toolbar_right_search"
             android:layout_width="25dp"
             android:layout_height="25dp"
