--- a/IWeather/app/src/main/res/layout/activity_county_choose.xml
+++ b/IWeather/app/src/main/res/layout/activity_county_choose.xml
@@ -36,11 +36,18 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/btn_speech_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="语音搜索" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_speech_search"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:background="@drawable/toolbar_speak_dark" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <ListView
