--- a/IWeather/app/src/main/res/layout/activity_weather_show.xml
+++ b/IWeather/app/src/main/res/layout/activity_weather_show.xml
@@ -23,15 +23,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/show_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="2dp"
-                android:textColor="#000"
-                android:textSize="20sp" />
-
             <android.support.v4.view.ViewPager
                 android:id="@+id/view_page"
                 android:layout_width="match_parent"
@@ -39,6 +30,11 @@
                 android:layout_weight="1"
                 android:overScrollMode="never"
                 android:scrollbars="none" />
+
+            <com.iflytek.klma.iweather.ui.MyViewPagerDots
+                android:id="@+id/dots_page"
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
         </LinearLayout>
     </com.iflytek.klma.iweather.ui.VerticalSwipeRefreshLayout>
 </LinearLayout>
