--- a/IWeather/app/src/main/res/layout/fragment_weather_info.xml
+++ b/IWeather/app/src/main/res/layout/fragment_weather_info.xml
@@ -3,7 +3,6 @@
     android:id="@+id/weather_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bk"
     android:orientation="vertical">
 
     <android.support.v4.widget.NestedScrollView
@@ -14,123 +13,101 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="#966cce86"
-                android:gravity="left|center_vertical"
-                android:orientation="horizontal">
+                android:background="#6cce86"
+
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
                     android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="15dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/now_temperature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
                         android:text="34°"
                         android:textColor="#fff"
                         android:textSize="70sp" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginBottom="10dp"
-                        android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/weather_pic"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/weather_sun" />
 
-                        <TextView
-                            android:id="@+id/weather_info"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="多云"
-                            android:textColor="#fff"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:layout_width="1dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginRight="8dp"
-                            android:background="#fff"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/wind_direct"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="南风"
-                            android:textColor="#fff"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/wind_level"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:gravity="center"
-                            android:text="微风"
-                            android:textColor="#fff"
-                            android:textSize="12sp" />
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical">
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+
+                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content">
 
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/weather_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="多云"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="right">
+                    <TextView
+                        android:layout_width="1dp"
+                        android:layout_height="10dp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
+                        android:background="#fff"
+                        android:gravity="center" />
 
-                            <TextView
-                                android:id="@+id/update_time"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="10dp"
-                                android:layout_marginTop="10dp"
-                                android:text="12:40"
-                                android:textColor="#fff"
-                                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/wind_direct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="南风"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
 
-                        </LinearLayout>
+                    <TextView
+                        android:id="@+id/wind_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:gravity="center"
+                        android:text="微风"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical|right">
+                    <TextView
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp" />
 
-                            <ImageView
-                                android:id="@+id/weather_pic"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
-                                android:layout_marginRight="40dp"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/weather_sun" />
-                        </LinearLayout>
-
-
-                    </FrameLayout>
+                    <TextView
+                        android:id="@+id/update_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="28dp"
+                        android:text="12:40更新"
+                        android:textColor="#fff"
+                        android:textSize="12sp" />
 
 
                 </LinearLayout>
@@ -142,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#77b175f5"
+                android:background="#b175f5"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -151,7 +128,7 @@
                     android:layout_height="50dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="25dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="12dp"
                     android:background="@drawable/weather_temperature" />
 
                 <LinearLayout
@@ -194,7 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#96759ee9"
+                android:background="#759ee9"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -293,7 +270,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#962d9ea7"
+                android:background="#2d9ea7"
                 android:orientation="vertical">
 
                 <FrameLayout
@@ -303,7 +280,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="top|left">
+                        android:gravity="bottom|right">
 
                         <ImageView
                             android:layout_width="100dp"
@@ -357,6 +334,7 @@
                             android:layout_marginLeft="18dp"
                             android:layout_marginRight="18dp"
                             android:layout_marginTop="10dp"
+                            android:maxWidth="260dp"
                             android:text="运动建议："
                             android:textColor="#fff"
                             android:textSize="15sp" />
