fixed crash caused by small city have no air quality data

--- a/IWeather/app/src/main/res/layout/fragment_weather_info.xml
+++ b/IWeather/app/src/main/res/layout/fragment_weather_info.xml
@@ -168,6 +168,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/air_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
