--- a/IWeather/app/src/main/res/layout/activity_weather_show.xml
+++ b/IWeather/app/src/main/res/layout/activity_weather_show.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bk"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.iflytek.klma.iweather.ui.WeatherShowActivity">
 
@@ -11,16 +13,20 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:showLeftButton="false" />
+        android:fitsSystemWindows="true"
+        app:showLeftButton="false"
+        app:toolbarBackground="#5000" />
 
     <com.iflytek.klma.iweather.ui.VerticalSwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             android:orientation="vertical">
 
             <android.support.v4.view.ViewPager
@@ -28,13 +34,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:fitsSystemWindows="true"
                 android:overScrollMode="never"
                 android:scrollbars="none" />
 
             <com.iflytek.klma.iweather.ui.MyViewPagerDots
                 android:id="@+id/dots_page"
                 android:layout_width="match_parent"
-                android:layout_height="30dp" />
+                android:layout_height="30dp"
+                android:fitsSystemWindows="true" />
         </LinearLayout>
     </com.iflytek.klma.iweather.ui.VerticalSwipeRefreshLayout>
 </LinearLayout>
