--- a/IWeather/app/src/main/res/layout/toolbar.xml
+++ b/IWeather/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimaryDark"
@@ -106,8 +107,7 @@
             android:scaleType="centerInside"
             android:scaleX="0.8"
             android:scaleY="0.8"
-            android:src="@drawable/toobar_close_dark"
-            android:visibility="invisible" />
+            android:src="@drawable/toobar_close_dark" />
 
     </LinearLayout>
 
