--- a/IWeather/app/src/main/res/layout/activity_alarm_setting.xml
+++ b/IWeather/app/src/main/res/layout/activity_alarm_setting.xml
@@ -16,6 +16,6 @@
     <ListView
         android:id="@+id/alarm_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
