--- a/IWeather/app/src/main/res/values/colors.xml
+++ b/IWeather/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#c5c8d9</color>
+    <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#449683</color>
-    <color name="colorAccent">#d4b4bf</color>
+    <color name="colorAccent">#449683</color>
 </resources>
