meizu Sms get problem

--- a/IMEPracticeDemo/app/src/main/res/layout/activity_main.xml
+++ b/IMEPracticeDemo/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.iflytek.mkl.imepracticedemo.MainActivity">
 
     <EditText
@@ -13,5 +14,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:text="get permission"
+        android:id="@+id/permission_get"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
